--- a/src/main/webapp/admin/accesses.xhtml
+++ b/src/main/webapp/admin/accesses.xhtml
@@ -35,8 +35,137 @@
 		</div>
 	</h:form>
 	<!-- delete form -->
-	
-	
+
+	<!-- edit Modal -->
+	<h:form id="editModalForm">
+		<div class="modal fade" id="editModal" tabindex="-1" role="dialog"
+			aria-labelledby="Editar Usuario">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal"
+							aria-label="Close">
+							<span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+						</button>
+						<h4 class="modal-title" id="myModalLabel">Editar Rol</h4>
+					</div>
+					<div class="modal-body">
+						<div class="form-group">
+							<div class="row">
+								<label class="col-md-4 control-label" for="nombre">Nombre
+									del Rol:</label>
+								<div class="col-md-8">
+									<h:inputText id="nombre"
+										styleClass="ui-state-default form-control input-sm input-block-level required"
+										value="#{accessesBean.roles.roleName}">
+										<p:ajax process="@this" />
+										<f:validateBean disabled="true" />
+									</h:inputText>
+								</div>
+							</div>
+							<div class="row">
+								<label class="col-md-4 control-label" for="desc">Descripción:</label>
+								<div class="col-md-8">
+									<p:inputTextarea id="desc"
+										value="#{accessesBean.roles.roleDescr}" rows="5" cols="38"
+										title="Descripción del Rol" scrollHeight="200">
+										<p:ajax process="@this" />
+										<f:validateBean disabled="true" />
+									</p:inputTextarea>
+								</div>
+							</div>
+							<hr />
+							<div class="row">
+								<div class="col-md-8">
+									<h:outputText
+										value="Podrás definir los módulos desde la opción de abajo" />
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="modal-footer">
+						<div class="input-group">
+							<p:commandButton id="editYesButton" value="Guardar"
+								oncomplete="$('#editModal').modal('hide')"
+								update="formUsers, deleteModalForm, createModalForm"
+								actionListener="#{accessesBean.editRole()}" />
+
+							<p:commandButton id="editNoButton" value="Cancelar"
+								oncomplete="$('#editModal').modal('hide')"
+								update="formUsers, deleteModalForm, createModalForm"
+								actionListener="#{accessesBean.searchRole()}" />
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</h:form>
+	<!-- end edit Modal -->
+
+	<!-- create Modal -->
+	<h:form id="createModalForm">
+		<div class="modal fade" id="createModal" tabindex="-1" role="dialog"
+			aria-labelledby="Editar Usuario">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal"
+							aria-label="Close">
+							<span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+						</button>
+						<h4 class="modal-title" id="myModalLabel">Crear Rol</h4>
+					</div>
+					<div class="modal-body">
+						<div class="form-group">
+							<div class="row">
+								<label class="col-md-4 control-label" for="nombre">Nombre
+									del Rol:</label>
+								<div class="col-md-8">
+									<h:inputText id="nombre"
+										styleClass="ui-state-default form-control input-sm input-block-level required"
+										value="#{accessesBean.roles.roleName}">
+										<p:ajax process="@this" />
+										<f:validateBean disabled="true" />
+									</h:inputText>
+								</div>
+							</div>
+							<div class="row">
+								<label class="col-md-4 control-label" for="desc">Descripción:</label>
+								<div class="col-md-8">
+									<p:inputTextarea id="desc"
+										value="#{accessesBean.roles.roleDescr}" rows="5" cols="38"
+										title="Descripción del Rol" scrollHeight="200">
+										<p:ajax process="@this" />
+										<f:validateBean disabled="true" />
+									</p:inputTextarea>
+								</div>
+							</div>
+							<hr />
+							<div class="row">
+								<div class="col-md-8">
+									<h:outputText
+										value="Podrás definir los módulos desde la opción de abajo" />
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="modal-footer">
+						<div class="input-group">
+							<p:commandButton id="editYesButton" value="Guardar"
+								oncomplete="$('#createModal').modal('hide')"
+								update="formUsers, deleteModalForm, createModalForm"
+								actionListener="#{accessesBean.persistRole()}" />
+
+							<p:commandButton id="editNoButton" value="Cancelar"
+								oncomplete="$('#createModal').modal('hide')"
+								update="formUsers, deleteModalForm, createModalForm"
+								actionListener="#{accessesBean.limpiarRoleFiltros()}" />
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</h:form>
 
 	<h:form id="formUsers">
 		<div class="panel panel-default">
@@ -209,9 +338,10 @@
 				<p:commandButton id="clear"
 					actionListener="#{accessesBean.limpiarRoleFiltros()}"
 					update="formRoles" value="Limpiar" />
-				<p:commandButton id="create"
+				<p:commandButton id="createButton" value="Crear nuevo rol"
 					actionListener="#{accessesBean.limpiarRoleFiltros()}"
-					update="formRoles" value="Crear Rol" />
+					oncomplete="$('#createModal').modal({backdrop: false})"
+					update="formRoles, deleteModalForm, editModalForm, createModalForm" />
 			</div>
 			<h:dataTable id="dataTableRoles"
 				rendered="#{accessesBean.searchRoles != null and !accessesBean.searchRoles.isEmpty()}"
@@ -239,7 +369,21 @@
 							binding="#{navigationBean.setNavigablePage('modules.xhtml')}" />
 						<f:actionListener
 							binding="#{accessesBean.loadRolesModules(roles)}" />
+						<span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+					</p:commandLink>
+					<p:commandLink id="editButton"
+						class="btn btn-default btn-sm btn-action"
+						oncomplete="$('#editModal').modal({backdrop: false})"
+						title="Editar #{roles.roleName}" update="editModalForm"
+						actionListener="#{accessesBean.setRoles(roles)}">
 						<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+					</p:commandLink>
+					<p:commandLink id="deleteButton"
+						class="btn btn-default btn-sm btn-action"
+						oncomplete="$('#deleteModal').modal({backdrop: false})"
+						title="Eliminar #{roles.roleName}" update="deleteModalForm"
+						actionListener="#{accessesBean.setRoles(roles)}">
+						<span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
 					</p:commandLink>
 				</h:column>
 			</h:dataTable>
