--- a/src/main/webapp/Collection.xhtml
+++ b/src/main/webapp/Collection.xhtml
@@ -66,7 +66,7 @@
 				collage();
 				$('.Collage').collageCaption();
 			});
-			$(".fancybox").fancybox();
+			$(".fancybox").fancybox({"width" : "70%", "height" : "70%"});
 		});
 
 		function collage() {
